@@ -1,3 +1,8 @@
+2009-04-29 Rodrigo Kumpera  <rkumpera@novell.com>
+
+	* gen-md-tests.c: Close the image after using it.
+	Force the runtime to initialize with 2.0.
+
 2009-04-28 Rodrigo Kumpera  <rkumpera@novell.com>
 
 	* gen-md-tests.c: Fix stream header calculation.
